--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Home"
-  avatar           : "images/facundo.jpg"
+  avatar           : "facundo.jpg"
   bio              : "I was born in Tucuman, a small NortWestent state of Argentina. Fan of Lio Messi, Asado, and Fernet."
   location         : "Madrid, Spain"
   employer         :
