--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : ""
-  avatar           : "facundo.jpg"
+  avatar           : "facundo.jpeg"
   bio              : "I was born in Tucuman, a small Northwestern state of Argentina. Fan of Lio Messi, Asado, and Fernet."
   location         : "Madrid, Spain"
   employer         :
