--- a/_config.yml
+++ b/_config.yml
@@ -181,6 +181,9 @@ collections:
   publications:
     output: true
     permalink: /:collection/:path/
+  working:
+    output: true
+    permalink: /:collection/:path/
   portfolio:
     output: true
     permalink: /:collection/:path/
@@ -242,6 +245,14 @@ defaults:
       type: talks
     values:
       layout: talk
+      author_profile: true
+      share: true  
+  # _working
+  - scope:
+      path: ""
+      type: working
+    values:
+      layout: working
       author_profile: true
       share: true
 
