--- a/_config.yml
+++ b/_config.yml
@@ -320,3 +320,5 @@ compress_html:
   clippings: all
   ignore:
     envs: development
+
+google-site-verification=lrItia_Q6bzgU8WS8R6CSYqyim12O1ulnmNheuXBu90
