--- a/_config.yml
+++ b/_config.yml
@@ -5,11 +5,7 @@
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # `jekyll serve`. If you change this file, please restart the server process.
 
-plugins:
-  - jekyll-remote-theme
-remote_theme           : "mmistakes/minimal-mistakes"
-minimal_mistakes_skin    : "dark" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
-
+minimal_mistakes_skin: "dark"
 
 # Site Settings
 locale                   : "en-Sapin"
@@ -152,7 +148,6 @@ exclude:
   - package.json
   - tmp
   - vendor
-  - assets
 keep_files:
   - .git
   - .svn
