--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 # Site Settings
 locale                   : "en-Sapin"
-title                    : "er"
+title                    : "ess"
 title_separator          : "-"
 name                     : &name "e r"
 description              : &description "test"
