--- a/_config.yml
+++ b/_config.yml
@@ -82,13 +82,13 @@ analytics:
 # Site Author
 author:
   name             : ""
-  avatar           : "s.jpeg"
+  avatar           : "kiss.png"
   bio              : "I was born in Tucuman, a small Northwestern province of Argentina. Fan of Lio Messi, Asado, and Fernet."
   location         : "Madrid, Spain"
   employer         :
   pubmed           :
   googlescholar    : 
-  email            : s@mail.com
+  email            : juanet.17@mail.com
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
