--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 # Site Author
 author:
   name             : ""
-  avatar           : "kiss.png"
+  avatar           : "facundo.jpeg"
   bio              : "I was born in Tucuman, a small Northwestern province of Argentina. Fan of Lio Messi, Asado, and Fernet."
   location         : "Madrid, Spain"
   employer         :
