--- a/_config.yml
+++ b/_config.yml
@@ -12,9 +12,9 @@ title                    : "Facundo Argañaraz"
 title_separator          : "-"
 name                     : &name "Facundo Argañaraz"
 description              : &description "HOLA"
-url                      :  "https://serteban.github.io"
+url                      :  "https://argafacu.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "serteban/serteban.github.io"
+repository               : "argafacu/argafacu.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
