--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ analytics:
 author:
   name             : ""
   avatar           : "facundo2.jpeg"
-  bio              : "I was born in Tucuman, a small Northwestern province of Argentina. Fan of Lio Messi, Asado, and Mate."
+  bio              : "I was born in Tucumán, a small Northwestern province of Argentina. Fan of Lio Messi, Asado, and Mate."
   location         : "Madrid, Spain"
   employer         :
   pubmed           :
