--- a/_config.yml
+++ b/_config.yml
@@ -191,7 +191,9 @@ collections:
   talks:
     output: true
     permalink: /:collection/:path/
-
+  coding:
+    output: true
+    permalink: /:collection/:path/
 
 # Defaults
 defaults:
@@ -254,6 +256,15 @@ defaults:
       type: working
     values:
       layout: working
+      author_profile: true
+      share: true
+
+    # _coding
+  - scope:
+      path: ""
+      type: coding
+    values:
+      layout: coding
       author_profile: true
       share: true
 
