--- a/_config.yml
+++ b/_config.yml
@@ -88,7 +88,7 @@ author:
   employer         :
   pubmed           :
   googlescholar    : 
-  email            : farganar@eco.uc3m.es
+  email            : facundo.arganaraz@sciencespo.fr
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
